test/functional/failtests/typecasting/castObjToObj.txt
TypeError: Cannot typecast non-primitive "foo" to "bar"
5 |     var inst = new foo();
6 |     var barInst = inst as bar;
  |                   ^ (6:19)
7 | }

